# chef

./: .gitignore  Cargo.toml  GRAMMAR.md  README.md  benchmark_plot.py  example.chef  run_benchmark.sh
colouring/: README.md  language-configuration.json  package.json
colouring/syntaxes/: chef.tmLanguage.json
src/: chunk.rs  code.rs  common.rs  compiler.rs  error.rs  function.rs  main.rs  memory.rs  native_functions.rs  objects.rs  rules.rs  scanner.rs  strings.rs  value.rs  vm.rs
src/chunk/: debug.rs  mod.rs
src/compiler/: mod.rs  precedence.rs
src/scanner/: mod.rs  token.rs
src/vm/: mod.rs
tests/: run.rs  run_suite.rs
tests/benchmark/: equality.lox  string_equality.lox
tests/common/: mod.rs
tests/suite/: empty_file.chef  precedence.chef  unexpected_character.chef
tests/suite/assignment/: associativity.chef  grouping.chef  infix_operator.chef  local.chef  prefix_operator.chef  syntax.chef  undefined.chef
tests/suite/bool/: equality.chef  not.chef
tests/suite/call/: bool.chef  nil.chef  num.chef  string.chef
tests/suite/comments/: line_at_eof.chef  only_line_comment.chef  only_line_comment_and_line.chef  unicode.chef
tests/suite/expressions/: evaluate.chef  parse.lox
tests/suite/function/: body_must_be_block.chef  empty_body.chef  extra_arguments.chef  local_mutual_recursion.chef  local_recursion.chef  local_recursion.lox  missing_arguments.chef  missing_comma_in_parameters.chef  nested_call_with_arguments.chef  parameters.chef  print.chef  recursion.chef  too_many_arguments.chef  too_many_parameters.chef
tests/suite/if/: else.chef  (+4 more)
(+14 files in other folders)
