[package]
name = "chef"
version = "0.0.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
debug_trace = []
debug_code = []

[dependencies]
thiserror = "1.0.64"

[dev-dependencies]
regex = "1.11.0"
test-generator = "0.3.1"